Fix Spacing Between Elements
- adjust spacing between elements so that it matches the design

--- a/src/components/Office/OfficeShipmentForm/OfficeShipmentForm.module.scss
+++ b/src/components/Office/OfficeShipmentForm/OfficeShipmentForm.module.scss
@@ -20,8 +20,16 @@
     }
   }
 
-  h2 {
-    @include u-margin-bottom(0);
+  :global(h2) {
+    @include u-margin-bottom(3);
+  }
+
+  :global(.usa-legend + .usa-label) {
+    @include u-margin-top(0);
+  }
+
+  :global(.usa-legend + .usa-form-group) {
+    @include u-margin-top(3);
   }
 
   .weightAllowance {
